--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <div class="header-email">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 12l11 3.1 7-8.1-8.156 5.672-4.312-1.202 15.362-7.68-3.974 14.57-3.75-3.339-2.17 2.925v-.769l-2-.56v7.383l4.473-6.031 4.527 4.031 6-22z"/></svg>
-            <a href="mailto:#0">danilo@rohkea.com</a>
+            <a href="mailto:#0">danilo@rohkea.cl</a>
         </div>
 
     </header> <!-- end s-header -->
@@ -97,28 +97,7 @@
 
                 <div class="intro-content__bottom">
 
-                    <div class="intro-content__counter-wrap">
-                        <h4>Launching in</h4>
-            
-                        <div class="counter">
-                            <div class="counter__time days">
-                                365
-                                <span>D</span>
-                            </div>
-                            <div class="counter__time hours">
-                                09
-                                <span>H</span>
-                            </div>
-                            <div class="counter__time minutes">
-                                54
-                                <span>M</span>
-                            </div>
-                            <div class="counter__time seconds">
-                                57
-                                <span>S</span>
-                            </div>
-                        </div>  <!-- end counter -->
-                    </div> <!-- end intro-content__counter-wrap -->
+                    
 
                     <div class="intro-content__notify">
                         <button type="button" class="btn--stroke btn--small modal-trigger">
