change text creative agency

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
         <div class="intro-scroll">
             <a href="#info" class="scroll-link smoothscroll">
-                Scroll For More
+                Creative Agency
             </a>
         </div> <!-- end intro scroll -->
 
